cmake_minimum_required(VERSION 3.16)
project(openbsd-operating_system)


add_subdirectory(operating_system-openbsd/node_openbsd)
add_subdirectory(operating_system-posix/acme_posix)
add_subdirectory(operating_system-darwin/acme_darwin)
add_subdirectory(operating_system-openbsd/acme_openbsd)
add_subdirectory(operating_system-posix/apex_posix)
add_subdirectory(operating_system-darwin/apex_darwin)
add_subdirectory(operating_system-openbsd/apex_openbsd)
add_subdirectory(operating_system-posix/aura_posix)
add_subdirectory(operating_system-darwin/aura_darwin)
add_subdirectory(operating_system-openbsd/aura_openbsd)
if(LXDE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_gnome)
    add_subdirectory(operating_system-openbsd/desktop_environment_gnome)
endif()
if(XFCE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_xfce)
    add_subdirectory(operating_system-openbsd/desktop_environment_xfce)
endif()
if(GNOME_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_gnome)
    add_subdirectory(operating_system-openbsd/desktop_environment_gnome)
endif()
if(KDE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/windowing_xcb)
    add_subdirectory(operating_system-posix/node_kde)
    add_subdirectory(operating_system-openbsd/desktop_environment_kde)
endif()


add_subdirectory(operating_system-posix/write_text_pango)
add_subdirectory(operating_system-posix/audio_alsa)
#add_subdirectory(operating_system-openbsd/audio_mixer_alsa)
#add_subdirectory(operating_system-openbsd/music_midi_alsa)



