cmake_minimum_required(VERSION 3.16)
project(openbsd-operating_system)

#add_subdirectory(operating_system-posix/nano_dynamic_library_dl)
#add_subdirectory(operating_system-posix/nano_dynamic_library_dl_null)
add_subdirectory(operating_system-posix/nano_http_command_line)
add_subdirectory(operating_system-posix/nano_compress_command_line)



add_subdirectory(operating_system-openbsd/node_openbsd)
add_subdirectory(operating_system-posix/acme_posix)
#add_subdirectory(operating_system-darwin/acme_darwin)
add_subdirectory(operating_system-openbsd/acme_openbsd)
add_subdirectory(operating_system-posix/apex_posix)
#add_subdirectory(operating_system-darwin/apex_darwin)
add_subdirectory(operating_system-openbsd/apex_openbsd)
add_subdirectory(operating_system-posix/aura_posix)
#add_subdirectory(operating_system-darwin/aura_darwin)
add_subdirectory(operating_system-openbsd/aura_openbsd)
if(LXDE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_gnome)
    add_subdirectory(operating_system-openbsd/desktop_environment_gnome)
endif()
#if(XFCE_DESKTOP)
    #add_subdirectory(operating_system-posix/windowing_x11)
    #add_subdirectory(operating_system-posix/node_gtk)
    #add_subdirectory(operating_system-posix/node_xfce)
    #add_subdirectory(operating_system-openbsd/desktop_environment_xfce)
#endif()
if(${GTK_BASED_DESKTOP})
    #add_subdirectory(operating_system-posix/node_gdk)
    add_subdirectory(operating_system-posix/nano_graphics_cairo)
    add_subdirectory(operating_system-posix/acme_windowing_g)
    add_subdirectory(operating_system-posix/windowing_posix)
    #add_subdirectory(operating_system-posix/windowing_system_x11)
    #add_subdirectory(operating_system-posix/nano_user_x11)
    #add_subdirectory(operating_system-posix/windowing_x11)
    #add_subdirectory(operating_system-posix/windowing_xcb)
if(${HAS_GTK4})
    add_subdirectory(operating_system-posix/acme_windowing_gtk4)
    add_subdirectory(operating_system-posix/innate_ui_gtk4)
    add_subdirectory(operating_system-posix/windowing_gtk4)
    add_subdirectory(operating_system-posix/node_gtk4)
    add_subdirectory(operating_system-openbsd/operating_ambient_gtk4)
elseif(${HAS_GTK3})
    add_subdirectory(operating_system-posix/acme_windowing_gtk3)
    add_subdirectory(operating_system-posix/innate_ui_gtk3)
    add_subdirectory(operating_system-posix/windowing_gtk3)
    add_subdirectory(operating_system-posix/node_gtk3)
    add_subdirectory(operating_system-openbsd/operating_ambient_gtk3)
else()
    #add_subdirectory(operating_system-posix/node_gtk_based)
    #add_subdirectory(operating_system-openbsd/desktop_environment_gtk_based)
endif()

elseif(${KDE_DESKTOP})

	add_subdirectory(operating_system-posix/nano_graphics_cairo)
    add_subdirectory(operating_system-posix/acme_windowing_q)
    add_subdirectory(operating_system-posix/windowing_posix)
    add_subdirectory(operating_system-posix/innate_ui_q)
    add_subdirectory(operating_system-posix/windowing_q)
    add_subdirectory(operating_system-posix/node_q)
    
	if(${HAS_KDE6})
	
		add_subdirectory(operating_system-posix/acme_windowing_q6)
		add_subdirectory(operating_system-posix/acme_windowing_kde6)
		add_subdirectory(operating_system-posix/innate_ui_q6)
		add_subdirectory(operating_system-posix/innate_ui_kde6)
		add_subdirectory(operating_system-posix/windowing_q6)
		add_subdirectory(operating_system-posix/windowing_kde6)
		add_subdirectory(operating_system-posix/node_kde6)
		add_subdirectory(operating_system-openbsd/operating_ambient_kde6)
		
	elseif(${HAS_KDE5})
	
		add_subdirectory(operating_system-posix/acme_windowing_q5)
		add_subdirectory(operating_system-posix/acme_windowing_kde5)
		add_subdirectory(operating_system-posix/innate_ui_q5)
		add_subdirectory(operating_system-posix/innate_ui_kde5)
		add_subdirectory(operating_system-posix/windowing_q5)
		add_subdirectory(operating_system-posix/windowing_kde5)
		add_subdirectory(operating_system-posix/node_kde5)
		add_subdirectory(operating_system-openbsd/operating_ambient_kde5)
		
	else()
	
		message(FATAL_ERROR "what desktop?")
		
	endif()
	
endif()

add_subdirectory(operating_system-posix/write_text_pango)
add_subdirectory(operating_system-posix/audio_sndio)



